# weather

./: .gitignore  README.md  configure.ac
.devcontainer/: Dockerfile
src/: Makefile.am  main.c
src/include/: meteo.h
src/rust/: Cargo.toml
src/rust/src/: lib.rs
